Update contact email and job title in index.html

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <li>Content Creation</li>
     <li>Cricket</li>
     <li>PUBG Gameplay & Streaming</li>
-    <li>Basic Machine Learning Data Work (Amazon experience)</li>
+    <li> Machine Learning Data associate (Amazon experience)</li>
   </ul>
 </section>
 
 <section class="contact">
   <h2>Contact</h2>
-  <p>Email: prakash@example.com</p>
+  <p>Email: prakashvardhanapu7@gmail.com</p>
 </section>
 
 <footer>
